# Cpp_RPi_PotiTest

RPi_ReadSerial/: CMakeLists.txt  main.cpp
RPi_ReadSerial/Arduino/: serial.ino
RPi_ReadSerial/include/: Message.h  RPI_SerialReader.h
RPi_ReadSerial/src/: Message.cpp  RPI_SerialReader.cpp
